clusters/building-blocks/other/apps/linkding/app/linkding-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
  namespace: default
  labels:
    app.kubernetes.io/name: linkding
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - kind: Rule
    match: Host(`bookmarks.${DOMAIN_NAME}`)
    priority: 10
    services:
    - kind: Service
      name: linkding
      namespace: default
      passHostHeader: true
      port: 9090
      scheme: http
